# HICE-Framework

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  app.py  dashboard_data.json  db_manager.py  debug_import.py  docker-compose.yml  hice_analysis.py  requirements.txt  server.py  startup.sh  update_data.py
assets/: style.css
conductor/: robustness_test.md
diagrams/: hice_pipeline.dot  hice_pipeline.mmd  hice_pipeline.puml
docs/: ACLED_NLP_Guide.md  Classification_System.md  Dashboard_API.md  HICE_AI_validation_tracking.md  HICE_Category_Validation_Findings.md  HICE_Detection_Pipeline.md  HICE_Reliability_Report.md  HICE_System_Logic.md  IEEE_Revision_Guide.md  Ontology_Alignment_Strategy.md  SDG_Nexus_Justification.md  SDG_Strategy_Alignment.md  Signal_System.md  Source_Adapters.md  Usage_Guide.md  Validation_Framework.md  Vulnerability_Scoring.md  actor_taxonomy_guide.md  ascii_logo.txt  data_dictionary.md  hice_proposal.md  myanmar_translation.md  proposal.md  research_insights.md  research_insights_nlp.md  visualization_guide.md  vulnerability_score.md
hice_framework/: README.md  __init__.py  _adapter.py  _detector.py  _signals.py  _vulnerability.py  hice_pipeline.mmd  pyproject.toml
hice_framework/hice_framework.egg-info/: PKG-INFO  SOURCES.txt
notebooks/: Conflict_Observatory_EDA.ipynb  Fatality_Distribution_BoxPlot.ipynb  NLP_Extraction_Assessment.ipynb  Rank_Stability.ipynb  Regional_Risk_Matrix.ipynb  Stability_Severity_Assessment.ipynb  TainYanTun_researchpipeline.ipynb  TainYanTun_researchpipeline.md  (+1 more)
(+58 files in other folders)
